# ConnectionsTesterMasterController

./: .gitignore  CMakeLists.txt  README.md  compileable_version_with_individual_components.patch  logs.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/application/: CMakeLists.txt  application.hpp
components/bluetooth/: CMakeLists.txt  bluetooth.cpp  bluetooth.hpp  bluetooth_gap.cpp  bluetooth_spp.hpp  spp_task.c
components/cmd_interpreter/: CMakeLists.txt  cmd_interpreter.hpp
components/communicator/: CMakeLists.txt
components/communicator/include/: communicator.hpp  communicator_concept.hpp  message.hpp
components/compa/: CMakeLists.txt  compa.cpp
components/cpp_wrappers/: wifi.hpp
components/cpp_wrappers/bluetooth/: bluetooth.hpp  bluetooth_gap.hpp  bluetooth_spp.cpp  bluetooth_spp.hpp  spp_task.h
components/cpp_wrappers/gpio/: gpio.hpp
components/cpp_wrappers/i2c/: iic.cpp  iic.hpp
components/cpp_wrappers/logger/: esp_logger.cpp  esp_logger.hpp
components/freertos_cpp_wrappers/mutex/: my_mutex.cpp  my_mutex.hpp
components/freertos_cpp_wrappers/queue/: queue.hpp
components/freertos_cpp_wrappers/semaphore/: semaphore.hpp
components/freertos_cpp_wrappers/task/: task.hpp
components/freertos_cpp_wrappers/timer/: timer.cpp  timer.hpp
components/gpio/: CMakeLists.txt  gpio.hpp
components/i2c/: CMakeLists.txt  iic.hpp
components/io_board/: CMakeLists.txt  board_controller.hpp  data_link.hpp  main_apparatus.hpp
components/io_board/include/: board.hpp  board_controller.hpp  boards_manager.hpp  data_link.hpp  main_apparatus.cpp  main_apparatus.hpp  measurement_structures.hpp
components/logger/: CMakeLists.txt  esp_logger.hpp
components/master/: cmd_interpreter.hpp
components/mutex/: CMakeLists.txt  my_mutex.cpp  my_mutex.hpp
components/proj_cfg/: CMakeLists.txt  project_configs.hpp
components/queue/: CMakeLists.txt  queue.hpp
components/reset_reason_notifier/: CMakeLists.txt  reset_reason_notifier.hpp
components/semaphore/: CMakeLists.txt  semaphore.hpp
components/task/: CMakeLists.txt  task.hpp
components/timer/: CMakeLists.txt  timer.hpp
components/tools/: CMakeLists.txt  string_parser.hpp  utilities.hpp  vector_algorithms.hpp
main/: CMakeLists.txt  application.hpp  main.cpp  project_configs.hpp  project_executor.hpp
tests/: main.cpp
